# A320_Simulator_game

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  Main.qml  main.cpp
src/controller/: fcu_controller.cpp  fcu_controller.hpp  main_controller.cpp  main_controller.hpp
src/qml/: Fcu.qml
